--- a/index.html
+++ b/index.html
@@ -40,6 +40,18 @@
 
         <main>
             <!-- Conteúdo principal da página -->
+            <section class="home" id="home">
+                <div class="content">
+                  <h3>Café fresco pela manhã</h3>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo
+                    voluptates sint assumenda itaque ut esse harum, expedita eligendi
+                    minus neque distinctio animi accusantium similique dolorem mollitia
+                    rerum obcaecati nulla placeat?
+                  </p>
+                  <a href="#" class="btn">Peça já o seu café!</a>
+                </div>
+              </section>
         </main>
 
         <footer class="footer">
