finish home responsive

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header class="header">
         <div class="logo">
-            <img src="./assets/images/1.png" alt="Logo">
+            <img src="./assets/images/logo-b.png" alt="Logo">
         </div>
         <ul class="nav-menu">
             <li><a href="#home">Home</a></li>
@@ -38,27 +38,28 @@
         </div>
     </header>
 
-        <main>
-            <!-- Conteúdo principal da página -->
-            <section class="home" id="home">
-                <div class="content">
-                  <h3>Café fresco pela manhã</h3>
-                  <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo
-                    voluptates sint assumenda itaque ut esse harum, expedita eligendi
-                    minus neque distinctio animi accusantium similique dolorem mollitia
-                    rerum obcaecati nulla placeat?
-                  </p>
-                  <a href="#" class="btn">Peça já o seu café!</a>
-                </div>
-              </section>
-        </main>
+    <main>
+        <!-- Conteúdo principal da página -->
+        <section class="home" id="home">
+            <div class="home__content">
+                <h3 class="home__content-tittle">Café fresco pela manhã</h3>
+                <p class="home__content-text">
 
-        <footer class="footer">
-            <!-- Conteúdo do rodapé -->
-            <p>Desenvolvido por Thiago Aquino</p>
-        </footer>
-        <script src="script.js"></script>
+                   O sabor robusto de um café de qualidade pode melhorar o humor e
+                    aumentar a motivação, preparando você para enfrentar as tarefas diárias com mais energia.
+                    Portanto, começar o dia com uma xícara de café bem feito não só
+                    agrada o paladar, mas também beneficia a saúde e o desempenho.
+                </p>
+                <a href="#" class="btn" class="home__content-link">Peça já o seu!</a>
+            </div>
+        </section>
+    </main>
+
+    <footer class="footer">
+        <!-- Conteúdo do rodapé -->
+        <p>Desenvolvido por Thiago Aquino</p>
+    </footer>
+    <script src="script.js"></script>
 
 </body>
 
