Finish Section About

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </div>
         <ul class="nav-menu">
             <li><a href="#home">Home</a></li>
-            <li><a href="#quem-somos">Quem Somos</a></li>
+            <li><a href="#about">Quem Somos</a></li>
             <li><a href="#produtos">Produtos</a></li>
             <li><a href="#avaliacoes">Avaliações</a></li>
             <li><a href="#contato">Contato</a></li>
@@ -42,10 +42,10 @@
         <!-- Conteúdo principal da página -->
         <section class="home" id="home">
             <div class="home__content">
-                <h3 class="home__content-tittle">Café fresco pela manhã</h3>
+                <h3 class="home__content-tittle">O Café de toda manhã</h3>
                 <p class="home__content-text">
 
-                   O sabor robusto de um café de qualidade pode melhorar o humor e
+                    O sabor robusto de um café de qualidade pode melhorar o humor e
                     aumentar a motivação, preparando você para enfrentar as tarefas diárias com mais energia.
                     Portanto, começar o dia com uma xícara de café bem feito não só
                     agrada o paladar, mas também beneficia a saúde e o desempenho.
@@ -53,6 +53,33 @@
                 <a href="#" class="btn" class="home__content-link">Peça já o seu!</a>
             </div>
         </section>
+        <sectoin class="about" id="about">
+            <div class="about__content">
+                <h3 class="about__content-tittle">Sobre Nós</h3>
+
+                <!-- <p class="about__content-text-1">
+                    Bem-vindo ao Portaal Coffee, onde o café é mais do que uma bebida - é uma experiência. Nossa
+                    cafeteria
+                    nasceu da paixão por oferecer momentos únicos e sabores inesquecíveis. No Portaal, cada xícara de
+                    café é preparada com grãos selecionados, provenientes das melhores fazendas, garantindo um sabor
+                    fresco e autêntico em cada gole.
+                </p>
+
+                <p class="about__content-text-2">
+                    Nossa missão é criar um ambiente acolhedor e inspirador, onde nossos clientes possam relaxar,
+                    socializar e desfrutar de uma pausa merecida. Valorizamos a qualidade e o cuidado em cada detalhe,
+                    desde o atendimento amigável até a decoração charmosa e aconchegante de nosso espaço.
+                </p> -->
+
+                <p class="about__content-text-3">
+                    No Portaal Coffee, acreditamos que o café tem o poder de conectar pessoas e transformar momentos
+                    cotidianos
+                    em ocasiões especiais. Venha nos visitar e descubra o prazer de saborear um café feito com dedicação
+                    e amor. Aqui, cada cliente é parte da nossa história, e estamos ansiosos para compartilhar essa
+                    jornada com você.
+                </p>
+            </div>
+        </sectoin>
     </main>
 
     <footer class="footer">
